aws 배포 오류 수정